[package]
name = "pixel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"

[dependencies.sdl2]
version = "~0.35"
default-features = false
features = ["static-link", "bundled", "image"]